--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@
               		</div>
               	</div>
            	</div>
-
             <div class="panel-body text-center" id="displayAnswer">display anser here</div>
-            <!-- <div class="text-center">
-                <button class="btn btn-default btn-lg" id="resetButton">Let's Play Again</button>
-            </div> -->
+            <div class="text-center">
+                <button class="btn btn-default btn-lg" id="resetButton">Play Again</button>
+            </div>
+            
       		</div>
       	</div>
 	</div>
