--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     	<div class = "col-md-4">
     		<div class="panel panel-default ">
           		<div class="panel-heading text-center">
-            		<h2 class="panel-title">TIME REMAINDING</h2>
+            		<h3 class="panel-title">TIME REMAINDING</h3>
           		</div>
         	<div class="panel-body">
             	<div class="text-center">
@@ -42,7 +42,7 @@
       	<div class = "col-md-8">
     		<div class="panel panel-default ">
           		<div class="panel-heading text-center">
-            		<h2 class="panel-title" id="questionAsk"></h2>
+            		<h3 class="panel-title" id="questionAsk"></h3>
           		</div>
         	     
               <div class="panel-body" id="multipleChoice">
@@ -64,15 +64,23 @@
               		</div>
               	</div>
            	</div>
-            <div class="panel-body text-center" id="displayAnswer">display anser here</div>
-            <div class="text-center">
-                <button class="btn btn-default btn-lg" id="resetButton">Play Again</button>
+            <div class="panel-body afterSection">
+              <div class ="row">
+                <div class="col-md-6 text-center" id="imageHolder">display image here</div>
+                <div class="col-md-6 text-center" id="displayAnswer">display answer here</div>
+              </div>
             </div>
-            
-      		</div>
+          </div>
       	</div>
 	</div>
+
+  <!-- restart button -->
+  <div class="text-center">
+    <button class="btn btn-default btn-lg" id="resetButton">Play Again</button>
+  </div>
 </div>
+
+<!-- link to script -->
 <script src='assets/javascript/app.js'></script>
 </body>
 </html>
