--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 
 <head>
     <title>Discover Vietnam</title>
+
+    <meta http-equiv='cache-control' content='no-cache'>
+    <meta http-equiv='expires' content='0'>
+    <meta http-equiv='pragma' content='no-cache'>
+    
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- link to the jQuery Library -->
