--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 
     </div>
 
-    <script type="text/javascript" src="assets/js/app.js"></script>
+    <script type="text/javascript" src="assets/js/app.js?version=1"></script>
 </body>
 
 </html>
