add music background and sound track

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                 <div class="col-md-5 text-center" id="image-holder">
                     <!-- <img src="" alt="" class="img-responsive" > -->
                 </div>
-                
+
                 <!-- <div class="col-sm-1 hidden-xs"></div> -->
 
                 <div class="col-md-2 text-center questionNum">
@@ -163,11 +163,12 @@
                 </div>
             </div>
         </div>
-
+        <audio id="audio" src="assets/audio/musicBg.mp3" loop="loop"></audio>
+        <audio id="endGame" src="assets/audio/taDa.mp3"></audio>
     </div>
 
-    <script type="text/javascript" src="assets/js/app.js?version=1"></script>
-    
+   <script type="text/javascript" src="assets/js/app.js"></script>
+
 </body>
 
 </html>
